# personal_python_leanring

./: README.md
phase-1/: .gitignore  pyproject.toml
phase-1-1/: .gitignore  README.md  pyproject.toml
phase-1-1/app/: calculator_function.py  calculator_oop.py  chat_bot.py  cli_chat_bot.py  cli_func.py  cli_oop.py
phase-1-1/tests/: test_function.py  test_oop.py
phase-1/app/: calculator.py
