[tool.poetry]
package-mode = false

[tool.poetry.scripts]
calc-func = "app.cli_func:main"

[project]
name = "phase-1-1"
version = "0.1.0"
description = "Python Fundamentals & Console Applications"
authors = [
    {name = "Surjoyday Talukdar",email = "surjoydaytalukdar.spn@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.108.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
