[project]
name = "phase-1-1"
version = "0.1.0"
description = "Python Fundamentals & Console Applications"
authors = [
    {name = "Surjoyday Talukdar",email = "surjoydaytalukdar.spn@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.108.1,<2.0.0)"
]

[tool.poetry]
packages = [
  { include = "app" }
]

[tool.poetry.scripts]
calc-func = "app.cli_func:main"
calc-oop = "app.cli_oop:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
