[tool.poetry]
package-mode = false

[project]
name = "phase-1"
version = "0.1.0"
description = "Python Fundamentals & Console Applications"
authors = [
    {name = "Surjoyday Talukdar",email = "surjoydaytalukdar.spn@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
