[tool.poetry]
package-mode = false

[project]
name = "phase-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Surjoyday Talukdar",email = "surjoydaytalukdar.spn@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
